Add Info on map marker

--- a/MvcApplication1/Content/Site.less
+++ b/MvcApplication1/Content/Site.less
@@ -343,3 +343,23 @@ footer
 	}
 
 }
+
+.infomap
+{
+	padding: 10px;
+    a
+	{
+		float: right;
+	}
+	img
+	{
+		float: left;
+		margin-bottom: 20px;
+		margin-right: 10px;
+	}
+}
+#infomapTech, #infomapHQ
+{
+	display:none;
+	visibility:none;
+}
