--- a/MvcApplication1/Views/Home/Contact.cshtml
+++ b/MvcApplication1/Views/Home/Contact.cshtml
@@ -54,7 +54,7 @@
     <div class="infomap">
         <address>
             <img src="/Content/images/marcker.png" alt="logo" />
-            <strong>Société Invenietis - Centre technique</strong><br />
+            <strong>Invenietis - Centre technique</strong><br />
             10 rue Mercoeur<br>
             Batiment A - 3e étage<br>
             75011 - Paris<br>
@@ -67,7 +67,7 @@
     <div class="infomap">
         <address>
             <img src="/Content/images/marcker.png" alt="logo" />
-            <strong>Société Invenietis - Siège social</strong><br />
+            <strong>Invenietis - Siège social</strong><br />
             23 rue Pelleport<br>
             75020 - Paris<br>
             France
