--- a/InvenietisPortal/Views/Home/Legal.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.cshtml
@@ -26,7 +26,8 @@
                             FRANCE<br />
                             Tel : + 33 1 43 67 88 75
                         </address>
-                        SARL au capital de 80 000,00 euros<br />
+                        SARL au capital de 80 000 euros<br />
+                        Code APE/NAF: 6201 Z - Programmation Informatique<br />
                         RCS Paris B 451 482 822<br />
                         TVA n° FR36 451 482 822<br />
                     </div>
@@ -39,7 +40,7 @@
                             91024 Évry CEDEX<br />
                             FRANCE
                         </address>
-                        SAS au capital de 25.000,00 euros<br />
+                        SAS au capital de 25.000 euros<br />
                         RCS Evry B 508 823 614<br />
                         <a href="http://naitways.com/">http://naitways.com/</a><br />
                     </div>
