--- a/InvenietisPortal/Views/Shared/_Layout.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.cshtml
@@ -56,22 +56,20 @@
                         </ul>
                     </div>
                     <div class="span6 center">
-                        <strong>Suivez nous sur</strong>
+                        <strong>Suivez-nous sur</strong>
                         <div class="follow">
                             <a href="https://twitter.com/invenietiscorp" target="_blank"><img src="@Url.Content("~/content/images/twitter.png")" style="width: 32px;"/></a>
                             <a href="https://github.com/Invenietis" target="_blank"><img src="@Url.Content("~/content/images/gh.png")" style="width: 32px;"/></a>
                             <a href="https://www.facebook.com/Invenietis" target="_blank"><img src="@Url.Content("~/content/images/facebook.png")" style="width: 32px;"/></a>
                         </div>
-                        <img src="Content/images/microsoft_black-tw.png" style="
-                            width: 200px;
-                        ">
+                        <img class="mslogo" src="Content/images/microsoft_black-tw-mini.png" />
                     </div>
                     <div class="span3">
                         <div class="pull-right address">
                             <address>
                                 <strong>Invenietis</strong>
-                                <a class="minimap" target="_blank" href="/Contact">
-                                    <img src="Content/images/map-bw.png" alt="Invenietis 10 rue Mercoeur 75011 Paris" > 
+                                <a class="minimap" href="/Contact">
+                                    <img src="Content/images/map-bw-med.png" alt="Invenietis 10 rue Mercoeur 75011 Paris" > 
                                 </a>
 
                                 10 rue Mercoeur<br />
