--- a/InvenietisPortal/Views/Home/Contact.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.cshtml
@@ -17,7 +17,7 @@
         }
     </style>
 }
-    <div id="map_canvas" style="width: 100%; height: 100%; min-height: 400px" onload="onload"></div>
+    <div id="map_canvas"></div>
     <div class="row-fluid top-bx">
         <div class="span12 ">
             <section class="container">
