--- a/InvenietisPortal/Views/Home/Index.cshtml
+++ b/InvenietisPortal/Views/Home/Index.cshtml
@@ -26,10 +26,10 @@
                         <div class="span8">
                             <h1>ADN</h1>
                             <div class="text">
-                                <p>Invenietis est une entreprise basée à Paris, animée par 8 passionnés, spécialistes en Ingénierie Logicielle. L’aventure a commencé en 2004 avec 2 personnes pour arriver aujourd’hui à une équipe opérationnelle, cohérente et disponible pour résoudre les problématiques complexes des projets web et bureautique actuels. Notre entreprise est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de la valeur en leur permettant de se consacrer pleinement à leur cœur de métier. Nous cherchons à établir des relations de confiance, d’humain à humain, pour accompagner les projets sur le long terme.</p>
+                                <p>Invenietis est une entreprise basée à Paris, animée par 8 passionnés, spécialistes en Ingénierie Logicielle. L’aventure a commencé en 2004 avec 2 personnes pour arriver aujourd’hui à une équipe opérationnelle, cohérente et disponible pour résoudre les problématiques complexes des projets web et bureautiques actuels. Notre entreprise est avant tout un moyen d’aider nos partenaires et clients à créer rapidement de la valeur en leur permettant de se consacrer pleinement à leur cœur de métier. Nous cherchons à établir des relations de confiance, d’humain à humain, pour accompagner les projets sur le long terme.</p>
                             </div>
                             <em>
-                                Nous voyons notre mission comme quelque chose qui va bien au-delà des simples questions
+                                Nous voyons notre mission comme quelque chose qui va bien <span style="white-space: nowrap">au-delà</span> des simples questions
                                 alimentaires.
                             </em>
                         </div>
@@ -98,7 +98,7 @@
                             <h1>Environnement</h1>
                             <div class="text">
                                 <p>
-                                    Le web n’est pas notre seul terrain de jeu. Nous travaillons également sur des environnements bureautiques comme pour le projet CiviKey. Ce projet open source et gratuit est destiné aux personnes en situation de handicap. Il leur permet d’utiliser l’outil informatique avec plus de facilité en les aidants au quotidien sur toutes les interactions homme-machine. Nous développons ce logiciel en partenariat avec l’école d’informatique IN’TECH INFO, Alcatel-Lucent, la fondation Stéria et la Plateforme des Nouvelles Technologies de l’hôpital de Garches (PFNT).
+                                    Le web n’est pas notre seul terrain de jeu. Nous travaillons également sur des environnements bureautiques comme pour le projet CiviKey. Ce projet open source et gratuit est destiné aux personnes en situation de handicap. Il leur permet d’utiliser l’outil informatique avec plus de facilité en les aidant au quotidien sur toutes les interactions homme-machine. Nous développons ce logiciel en partenariat avec l’école d’informatique IN’TECH INFO, Alcatel-Lucent, la fondation Stéria et la Plateforme des Nouvelles Technologies de l’hôpital de Garches (PFNT).
                                 </p>
                             </div>
                             <em>
