--- a/InvenietisPortal/Content/Site.less
+++ b/InvenietisPortal/Content/Site.less
@@ -102,6 +102,7 @@ header .title
 	.full-logo
 	{
 		width: 600px;
+		height: 260px;
 		margin: 80px auto 100px auto;
 		position: relative;
 
@@ -258,6 +259,7 @@ footer
 	.landing-header .full-logo
 	{
 		width: 450px;
+		height: 195px;
 		margin: 30px auto 50px auto;
 
 		.keywords
@@ -293,6 +295,7 @@ footer
 	.landing-header .full-logo
 	{
 		width: 300px;
+		height: 130px;
 
 		.keywords
 		{
