--- a/InvenietisPortal/Content/Site.less
+++ b/InvenietisPortal/Content/Site.less
@@ -205,6 +205,7 @@ footer
 				margin: 3px 10px 0px 1px;
 				.box-shadow( 0 0 3px white );
 				width: 55px;
+				height: 55px;
 				.transition-all;
 				&:hover
 				{
@@ -212,6 +213,11 @@ footer
 				}
 			}
 		}
+	}
+
+	.legal
+	{
+		margin: 30px;
 	}
 }
 
@@ -270,10 +276,15 @@ footer
 	}
 	footer
 	{
+		.fellowus
+		{
+			padding-top: 20px;
+		}
 		text-align: center;
 		.follow{ text-align: center; }
 		.address
 		{
+			margin-top: 20px;
 			width: 100%;
 			float: left;
 			text-align: center;
