--- a/InvenietisPortal/Views/Shared/_Layout.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                             <li><a href="http://civikey.fr" target="_blank">CiviKey</a></li>
                         </ul>
                     </div>
-                    <div class="span6 center">
+                    <div class="span6 center fellowus">
                         <strong>Suivez-nous sur</strong>
                         <div class="follow">
                             <a href="https://twitter.com/invenietiscorp" target="_blank"><img src="@Url.Content("~/content/images/twitter.png")" style="width: 32px;"/></a>
@@ -82,12 +82,14 @@
                     </div>
                 </div>
                 <div class="row-fluid">
-                    <div class="span12 center" style="margin-top: 30px">
-                        <img src="@Url.Content("~/content/images/logo.png")" />
-                        <span>
-                            Copyright © 2012 Invenietis. Tous Droits Réservés. 
-                            <a href="/Legal"> Mentions légales</a>
-                        </span>
+                    <div class="span12 center">
+                        <div class="legal">
+                            <img src="@Url.Content("~/content/images/logo.png")" />
+                            <span>
+                                Copyright © 2012 Invenietis. Tous Droits Réservés. 
+                                <a href="/Legal"> Mentions légales</a>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
