--- a/InvenietisPortal/Views/Home/Cuke.cshtml
+++ b/InvenietisPortal/Views/Home/Cuke.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Cuke";
+    ViewBag.Title = "Invenietis - Cuke";
+    ViewBag.Keywords = "";
 }
 
     <div class="row-fluid top-bx">
