--- a/InvenietisPortal/Views/Home/Legal.en.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.en.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.en.cshtml";
-    ViewBag.Title = "Mentions légales";
+    ViewBag.Title = "Invenietis - Legal Terms";
+    ViewBag.Keywords = "";
 }
 
     <div class="row-fluid top-bx">
