--- a/InvenietisPortal/Views/Home/Legal.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.fr.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
-    ViewBag.Title = "Mentions légales";
+    ViewBag.Title = "Invenietis - Mentions légales";
+    ViewBag.Keywords = "";
 }
 
     <div class="row-fluid top-bx">
