--- a/InvenietisPortal/Views/Shared/_Layout.en.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.en.cshtml
@@ -92,7 +92,7 @@
                             <img src="@Url.Content("~/Content/images/logo.png")" />
                             <span>
                                 Copyright © 2012 Invenietis. All rights reserved. 
-                                <a href="@Url.Action( "Legal" )">Legal notice</a>.
+                                <a href="@Url.Action( "Legal" )">Legal Terms</a>.
                             </span>
                         </div>
                     </div>
