--- a/InvenietisPortal/Views/Home/Index.en.cshtml
+++ b/InvenietisPortal/Views/Home/Index.en.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.en.cshtml";
-    ViewBag.Title = "Home";
+    ViewBag.Title = "Invenietis - Presentation";
+    ViewBag.Keywords = "";
 }
         <div class="row-fluid">
             <div class="span12">
