--- a/InvenietisPortal/Views/Home/Index.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Index.fr.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
-    ViewBag.Title = "Acceuil";
+    ViewBag.Title = "Invenietis - Présentation";
+    ViewBag.Keywords = "";
 }
         <div class="row-fluid">
             <div class="span12">
