--- a/InvenietisPortal/Content/Site.less
+++ b/InvenietisPortal/Content/Site.less
@@ -227,7 +227,7 @@ footer
 		}
 	}
 	.copyright{ padding: 20px 0; }
-	img.mslogo{ display: block; margin: 20px auto 0 auto; width: 200px;}
+	img.mslogo{ display: block; margin: 20px auto 0 auto;}
 
 	address
 	{
