--- a/InvenietisPortal/Views/Home/Cuke.cshtml
+++ b/InvenietisPortal/Views/Home/Cuke.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Invenietis - Cuke";
     ViewBag.Keywords = "";
+    ViewBag.Description = "";
 }
 
     <div class="row-fluid top-bx">
