--- a/InvenietisPortal/Views/Home/Legal.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.fr.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
     ViewBag.Title = "Invenietis - Mentions légales";
     ViewBag.Keywords = "";
+    ViewBag.Description = "";
 }
 
     <div class="row-fluid top-bx">
@@ -15,7 +16,7 @@
                 </div>
                 <div class="row-fluid">
                     <div class="span6 well">
-                        <h4>Editeur de ce Site :</h4>
+                        <h4>Editeur de ce Site&nbsp;:</h4>
                         <address>
                             <strong>Invenietis</strong><br />
                             23 rue pelleport<br />
@@ -29,7 +30,7 @@
                         TVA n° FR36 451 482 822<br />
                     </div>
                     <div class="span6 well">
-                        <h4>Hébergeur de ce Site :</h4>
+                        <h4>Hébergeur de ce Site&nbsp;:</h4>
                         <address>
                             <strong>Naitways</strong><br />
                             NAITWAYS SAS<br />
@@ -50,7 +51,8 @@
                         ou <br />
                         Invenietis<br />
                         23 rue pelleport<br />
-                        75020 Paris FANCE<br />
+                        75020 Paris<br />
+                        FRANCE<br />
                     </div>
                 </div>
             </section>
