--- a/InvenietisPortal/Views/Home/Contact.en.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.en.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_Layout.en.cshtml";
     ViewBag.Title = "Invenietis - Contact us";
     ViewBag.Keywords = "";
+    ViewBag.Description = "";
 }
 @section header
 {
