--- a/InvenietisPortal/Views/Home/Contact.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.fr.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
     ViewBag.Title = "Invenietis - Nous contacter";
     ViewBag.Keywords = "";
+    ViewBag.Description = "";
 }
 @section header
 {
