--- a/InvenietisPortal/Views/Home/Index.en.cshtml
+++ b/InvenietisPortal/Views/Home/Index.en.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_Layout.en.cshtml";
     ViewBag.Title = "Invenietis - Presentation";
     ViewBag.Keywords = "";
+    ViewBag.Description = "";
 }
         <div class="row-fluid">
             <div class="span12">
@@ -96,7 +97,7 @@
                             <h1>The environment</h1>
                             <div class="text">
                                 <p>
-                                    The Web is not our only sandbox. We also work in office automation environments such as the CiviKey project. This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers. We are developing this software in partnership with the Alcatel-Lucent Intech’INFO school of computer science, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
+                                    The Web is not our only sandbox. We also work in office automation environments such as the CiviKey project. This free open-source project is designed to make it easier for people with physical handicaps to use electronic devices and computers. We are developing this software in partnership with the Alcatel-Lucent group, Intech’INFO school of computer science, the Stéria Foundation, and the Garches hospital's New Technology Platform (PFNT).
                                 </p>
                             </div>
                             <em>
