--- a/InvenietisPortal/Views/Home/Index.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Index.fr.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
     ViewBag.Title = "Invenietis - Présentation";
     ViewBag.Keywords = "";
+    ViewBag.Description = "";
 }
         <div class="row-fluid">
             <div class="span12">
