--- a/InvenietisPortal/Views/Home/Legal.en.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.en.cshtml
@@ -2,6 +2,7 @@
     Layout = "~/Views/Shared/_Layout.en.cshtml";
     ViewBag.Title = "Invenietis - Legal Terms";
     ViewBag.Keywords = "";
+    ViewBag.Description = "";
 }
 
     <div class="row-fluid top-bx">
@@ -15,7 +16,7 @@
                 </div>
                 <div class="row-fluid">
                     <div class="span6 well">
-                        <h4>Publisher of this Site :</h4>
+                        <h4>Publisher of this Site:</h4>
                         <address>
                             <strong>Invenietis</strong><br />
                             23 rue pelleport<br />
@@ -29,7 +30,7 @@
                         TVA n° FR36 451 482 822<br />
                     </div>
                     <div class="span6 well">
-                        <h4>Hosting service provider of this Site :</h4>
+                        <h4>Hosting service provider of this Site:</h4>
                         <address>
                             <strong>Naitways</strong><br />
                             NAITWAYS SAS<br />
@@ -47,10 +48,11 @@
                         <h3>Information technology, data files and civil liberties</h3>
                         Users providing this personal information by the intermediary of the Website have, in compliance with the provisions of the law, a right of access to the data concerning them, as well as the right to obtain the modification, rectification or deletion of these data. To exercise this right, they need only address a request for modifications of the information concerning them. Users have a right of opposition, of access, and of rectification of the data concerning them. Thus, Users can demand that the data concerning them be rectified, completed, clarified, updated or erased if they are inexact, incomplete, ambiguous, expired or if their collection, utilisation, communication or conservation are prohibited. Users may exercise these rights by post mail or e-mail to:<br />
                         admin@invenietis.com<br />
-                        ou <br />
+                        or <br />
                         Invenietis<br />
                         23 rue pelleport<br />
-                        75020 Paris FANCE<br />
+                        75020 Paris<br />
+                        FRANCE<br />
                     </div>
                 </div>
             </section>
